footer / missing in the menu item

--- a/_layouts/19_portfolio_single_layout_3.html
+++ b/_layouts/19_portfolio_single_layout_3.html
@@ -288,17 +288,17 @@
                       <a href="#" title="">hello@miles.co</a>
                     </h3>
                     <ul>
-                      <li><a href="26_about_me.html" title="">About</a></li>
+                      <li><a href="/26_about_me.html" title="">About</a></li>
                       <li>
-                        <a href="15_portfolio_horizontal_scroll.html" title=""
+                        <a href="/15_portfolio_horizontal_scroll.html" title=""
                           >Works</a
                         >
                       </li>
-                      <li><a href="30_contact_1.html" title="">Contact</a></li>
+                      <li><a href="/30_contact_1.html" title="">Contact</a></li>
                       <li>
-                        <a href="28_services_2.html" title="">Services</a>
+                        <a href="/28_services_2.html" title="">Services</a>
                       </li>
-                      <li><a href="blog-layout1.html" title="">News</a></li>
+                      <li><a href="/blog_layout1.html" title="">News</a></li>
                     </ul>
                   </div>
                   <!--get-touch-txt end-->
