--- a/_layouts/home-5.html
+++ b/_layouts/home-5.html
@@ -360,11 +360,11 @@ pagination:
                     >
                   </h2>
                   <ul>
-                    <li><a href="25_about_business.html" title="">About</a></li>
+                    <li><a href="/25_about_business.html" title="">About</a></li>
                     <li><a href="#" title="">Travel</a></li>
                     <li><a href="#" title="">Lifestyle</a></li>
                     <li><a href="#" title="">Design</a></li>
-                    <li><a href="30_contact_1.html" title="">Contact</a></li>
+                    <li><a href="/30_contact_1.html" title="">Contact</a></li>
                   </ul>
                 </div>
                 <!--widget-contact end-->
