35_404_error.html changing to 404.html

--- a/_layouts/37_pricing.html
+++ b/_layouts/37_pricing.html
@@ -91,7 +91,7 @@
 						<li><a href="33_career.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Career">Career</a></li>
 						<li><a href="34_career_detail.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Career Details">Career Details</a></li>
 						<li><a href="37_pricing.html" class="animsition-link active" data-animsition-out-class="fade-out" title="" data-text="Pricing">Pricing</a></li>
-						<li><a href="35_404_error.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="404">404</a></li>
+						<li><a href="404.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="404">404</a></li>
 						<li><a href="36_coming_soon.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Coming Soon">Coming Soon</a></li>
 					</ul>
 				</li>
