--- a/_layouts/30_contact_1.html
+++ b/_layouts/30_contact_1.html
@@ -357,7 +357,7 @@
               </li>
               <li>
                 <a
-                  href="35_404_error.html"
+                  href="404.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
