--- a/_layouts/24_about_agency.html
+++ b/_layouts/24_about_agency.html
@@ -8,7 +8,7 @@
         <div class="container-fluid">
           <div class="header-content d-flex flex-wrap align-items-center">
             <div class="logo">
-              <a href="#" title=""><img src="assets/img/logo2.png" alt="" /></a>
+              <a href="#" title=""><img src="/assets/img/logo2.png" alt="" /></a>
             </div>
             <!--logo end-->
             <div class="mile-right ml-auto">
@@ -34,7 +34,7 @@
       <div class="responsive-menu">
         <div class="rep-header">
           <div class="rep-logo">
-            <img src="assets/img/logo2.png" alt="" />
+            <img src="/assets/img/logo2.png" alt="" />
           </div>
           <a href="#" title="" class="close-menu"
             ><i class="lni lni-close"></i
@@ -382,7 +382,7 @@
             <ul>
               <li>
                 <a
-                  href="blog-layout1.html"
+                  href="blog_layout1.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
@@ -842,17 +842,17 @@
                       <a href="#" title="">hello@miles.co</a>
                     </h3>
                     <ul>
-                      <li><a href="26_about_me.html" title="">About</a></li>
+                      <li><a href="/26_about_me.html" title="">About</a></li>
                       <li>
-                        <a href="15_portfolio_horizontal_scroll.html" title=""
+                        <a href="/15_portfolio_horizontal_scroll.html" title=""
                           >Works</a
                         >
                       </li>
-                      <li><a href="30_contact_1.html" title="">Contact</a></li>
+                      <li><a href="/30_contact_1.html" title="">Contact</a></li>
                       <li>
-                        <a href="28_services_2.html" title="">Services</a>
+                        <a href="/28_services_2.html" title="">Services</a>
                       </li>
-                      <li><a href="blog-layout1.html" title="">News</a></li>
+                      <li><a href="/blog_layout1.html" title="">News</a></li>
                     </ul>
                   </div>
                   <!--get-touch-txt end-->
