--- a/_layouts/26_about_me.html
+++ b/_layouts/26_about_me.html
@@ -8,7 +8,7 @@
         <div class="container-fluid">
           <div class="header-content d-flex flex-wrap align-items-center">
             <div class="logo">
-              <a href="#" title=""><img src="assets/img/logo2.png" alt="" /></a>
+              <a href="#" title=""><img src="/assets/img/logo2.png" alt="" /></a>
             </div>
             <!--logo end-->
             <div class="mile-right ml-auto">
@@ -34,7 +34,7 @@
       <div class="responsive-menu">
         <div class="rep-header">
           <div class="rep-logo">
-            <img src="assets/img/logo2.png" alt="" />
+            <img src="/assets/img/logo2.png" alt="" />
           </div>
           <a href="#" title="" class="close-menu"
             ><i class="lni lni-close"></i
@@ -382,7 +382,7 @@
             <ul>
               <li>
                 <a
-                  href="blog-layout1.html"
+                  href="blog_layout1.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
@@ -392,7 +392,7 @@
               </li>
               <li>
                 <a
-                  href="blog-layout2.html"
+                  href="blog_layout2.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
