--- a/_layouts/25_about_business.html
+++ b/_layouts/25_about_business.html
@@ -12,8 +12,8 @@
 			<div class="container-fluid">
 				<div class="header-content d-flex flex-wrap align-items-center">
 					<div class="logo">
-						<a href="#" title="" class="white-logo"><img src="assets/img/logo.png" alt=""></a>
-						<a href="#" title="" class="dark-logo"><img src="assets/img/logo2.png" alt=""></a>
+						<a href="#" title="" class="white-logo"><img src="/assets/img/logo.png" alt=""></a>
+						<a href="#" title="" class="dark-logo"><img src="/assets/img/logo2.png" alt=""></a>
 					</div><!--logo end-->
 					<div class="mile-right ml-auto">
 						<button class="nav-toggle-btn a-nav-toggle white ml-auto">
@@ -33,7 +33,7 @@
 		<div class="responsive-menu">
 			<div class="rep-header">
 				<div class="rep-logo">
-					<img src="assets/img/logo2.png" alt="">
+					<img src="/assets/img/logo2.png" alt="">
 				</div>
 				<a href="#" title="" class="close-menu"><i class="lni lni-close"></i></a>
 			</div>
@@ -98,8 +98,8 @@
 				</li>
 				<li><a href="#" title="">Blogs</a>
 					<ul>
-						<li><a href="blog-layout1.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V1">Blog Layout V1</a></li>
-						<li><a href="blog-layout2.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V2">Blog Layout V2</a></li>
+						<li><a href="blog_layout1.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V1">Blog Layout V1</a></li>
+						<li><a href="blog_layout2.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V2">Blog Layout V2</a></li>
 						<li><a href="blog-single-layout1.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Single Layout V1">Blog Single Layout V1</a></li>
 						<li><a href="blog-single-layout2.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Single Layout V2">Blog Single Layout V2</a></li>
 					</ul>
