/ missing from js

--- a/_layouts/33_career.html
+++ b/_layouts/33_career.html
@@ -682,7 +682,7 @@
             <div class="row align-items-center">
               <div class="col-lg-6 col-md-6">
                 <div class="cp-mile">
-                  <img src="assets/img/ft-logo.png" alt="" />
+                  <img src="/assets/img/ft-logo.png" alt="" />
                   <p>© 2020. All Rights Reserved</p>
                 </div>
                 <!--cp-mile end-->
@@ -715,6 +715,6 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
