--- a/_layouts/blog-layout2.html
+++ b/_layouts/blog-layout2.html
@@ -423,6 +423,6 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
