--- a/_layouts/home-5.html
+++ b/_layouts/home-5.html
@@ -416,6 +416,6 @@ pagination:
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
