--- a/_layouts/home-6.html
+++ b/_layouts/home-6.html
@@ -516,6 +516,6 @@
     </div>
     <!--wrapper ned-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
