--- a/_layouts/home-8.html
+++ b/_layouts/home-8.html
@@ -517,7 +517,7 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
     <script>
       $(document).on("ready", function () {
         if ($(window).width() > 768) {
