--- a/_layouts/32_team.html
+++ b/_layouts/32_team.html
@@ -822,6 +822,6 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
