--- a/_layouts/35_404_error.html
+++ b/_layouts/35_404_error.html
@@ -166,7 +166,7 @@
 					<div class="row align-items-center">
 						<div class="col-lg-6 col-md-6">
 							<div class="cp-mile">
-								<img src="assets/img/ft-logo.png" alt="">
+								<img src="/assets/img/ft-logo.png" alt="">
 								<p>© 2020. All Rights Reserved</p>
 							</div><!--cp-mile end-->
 						</div>
@@ -186,7 +186,7 @@
 	</div><!--wrapper end-->
 
 
-<script src="assets/js/bundle.min.js"></script>
+<script src="/assets/js/bundle.min.js"></script>
 
 
 </body>
