--- a/_layouts/blog-single-layout1.html
+++ b/_layouts/blog-single-layout1.html
@@ -360,6 +360,6 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
