--- a/_layouts/home-10.html
+++ b/_layouts/home-10.html
@@ -514,6 +514,6 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
