--- a/_layouts/home-11.html
+++ b/_layouts/home-11.html
@@ -923,6 +923,6 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
