--- a/_layouts/home-2.html
+++ b/_layouts/home-2.html
@@ -659,7 +659,7 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
 
     <script type="text/javascript">
       $(document).ready(function () {
