--- a/_layouts/home-9.html
+++ b/_layouts/home-9.html
@@ -562,6 +562,6 @@
     </div>
     <!--wrapper end-->
 
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="/assets/js/bundle.min.js"></script>
   </body>
 </html>
