--- a/_layouts/31_contact_2.html
+++ b/_layouts/31_contact_2.html
@@ -392,7 +392,7 @@
               </li>
               <li>
                 <a
-                  href="blog-layout2.html"
+                  href="blog_layout2.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
