--- a/_layouts/34_career_detail.html
+++ b/_layouts/34_career_detail.html
@@ -382,7 +382,7 @@
             <ul>
               <li>
                 <a
-                  href="blog-layout1.html"
+                  href="blog_layout1.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
@@ -392,7 +392,7 @@
               </li>
               <li>
                 <a
-                  href="blog-layout2.html"
+                  href="blog_layout2.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
