--- a/_layouts/37_pricing.html
+++ b/_layouts/37_pricing.html
@@ -97,8 +97,8 @@
 				</li>
 				<li><a href="#" title="">Blogs</a>
 					<ul>
-						<li><a href="blog-layout1.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V1">Blog Layout V1</a></li>
-						<li><a href="blog-layout2.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V2">Blog Layout V2</a></li>
+						<li><a href="blog_layout1.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V1">Blog Layout V1</a></li>
+						<li><a href="blog_layout2.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Layout V2">Blog Layout V2</a></li>
 						<li><a href="blog-single-layout1.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Single Layout V1">Blog Single Layout V1</a></li>
 						<li><a href="blog-single-layout2.html" class="animsition-link" data-animsition-out-class="fade-out" title="" data-text="Blog Single Layout V2">Blog Single Layout V2</a></li>
 					</ul>
