--- a/_layouts/home-10.html
+++ b/_layouts/home-10.html
@@ -457,13 +457,13 @@
                   <a href="#" title="">hello@miles.co</a>
                   <ul>
                     <li>
-                      <a href="15_portfolio_horizontal_scroll.html" title=""
+                      <a href="/15_portfolio_horizontal_scroll.html" title=""
                         >Works</a
                       >
                     </li>
-                    <li><a href="24_about_agency.html" title="">About</a></li>
-                    <li><a href="blog-layout1.html" title="">News</a></li>
-                    <li><a href="30_contact_1.html" title="">Contact</a></li>
+                    <li><a href="/24_about_agency.html" title="">About</a></li>
+                    <li><a href="/blog_layout1.html" title="">News</a></li>
+                    <li><a href="/30_contact_1.html" title="">Contact</a></li>
                   </ul>
                 </div>
                 <!--get-touch-txt end-->
