--- a/_layouts/home-2.html
+++ b/_layouts/home-2.html
@@ -625,11 +625,11 @@
                   Melbourne, FL 32904, United States
                 </h2>
                 <ul class="ft-links-mile">
-                  <li><a href="24_about_agency.html" title="">about us</a></li>
-                  <li><a href="33_career.html" title="">jobs</a></li>
-                  <li><a href="30_contact_1.html" title="">contact us</a></li>
-                  <li><a href="28_services_2.html" title="">services</a></li>
-                  <li><a href="blog-layout1.html" title="">news</a></li>
+                  <li><a href="/24_about_agency.html" title="">about us</a></li>
+                  <li><a href="/33_career.html" title="">jobs</a></li>
+                  <li><a href="/30_contact_1.html" title="">contact us</a></li>
+                  <li><a href="/28_services_2.html" title="">services</a></li>
+                  <li><a href="/blog_layout1.html" title="">news</a></li>
                 </ul>
                 <!--ft-links-mile end-->
                 <ul class="social-links v2">
