--- a/_layouts/home-3.html
+++ b/_layouts/home-3.html
@@ -376,13 +376,13 @@
             </div>
             <!--ft-logo end-->
             <ul class="nav-btm-links">
-              <li><a href="25_about_business.html" title="">about</a></li>
+              <li><a href="/25_about_business.html" title="">about</a></li>
               <li>
-                <a href="15_portfolio_horizontal_scroll.html" title="">works</a>
+                <a href="/15_portfolio_horizontal_scroll.html" title="">works</a>
               </li>
-              <li><a href="27_service_1.html" title="">services</a></li>
-              <li><a href="blog-layout1.html" title="">news</a></li>
-              <li><a href="30_contact_1.html" title="">contact</a></li>
+              <li><a href="/27_service_1.html" title="">services</a></li>
+              <li><a href="/blog_layout1.html" title="">news</a></li>
+              <li><a href="/30_contact_1.html" title="">contact</a></li>
             </ul>
             <!--nav-btm-links end-->
             <div class="cpy-text">
