--- a/_layouts/home-4.html
+++ b/_layouts/home-4.html
@@ -390,18 +390,18 @@
                         <a href="#" title="">hello@daniel.io</a>
                         <ul>
                           <li>
-                            <a href="27_service_1.html" title="">Services</a>
+                            <a href="/27_service_1.html" title="">Services</a>
                           </li>
                           <li>
                             <a
-                              href="15_portfolio_horizontal_scroll.html"
+                              href="/15_portfolio_horizontal_scroll.html"
                               title=""
                               >Works</a
                             >
                           </li>
-                          <li><a href="blog-layout1.html" title="">News</a></li>
+                          <li><a href="/blog_layout1.html" title="">News</a></li>
                           <li>
-                            <a href="30_contact_1.html" title="">Contact</a>
+                            <a href="/30_contact_1.html" title="">Contact</a>
                           </li>
                         </ul>
                       </div>
