--- a/_layouts/31_contact_2.html
+++ b/_layouts/31_contact_2.html
@@ -382,7 +382,7 @@
             <ul>
               <li>
                 <a
-                  href="blog-layout1.html"
+                  href="blog_layout1.html"
                   class="animsition-link"
                   data-animsition-out-class="fade-out"
                   title=""
